# rover_decentralized_ergodic_control

./: CMakeLists.txt  README.md  clear_map_rover0_tablet.sh  clear_map_stomp.sh  clear_map_tablet.sh  launch_northwestern_hardware_code.sh  launch_northwestern_sim_code.sh  package.xml
config/: tactic_params_nu.yaml  tactic_params_shelby.yaml
launch/: ergodic_control.launch  real_hardware_ergodic_control.launch  visualize_swarm_paths.launch
msg/: tablet.msg
rviz/: swarm_paths.rviz
src/: ergodic_planner.py  global_pose.py  position_controller.py  utilities.py
src/rt_erg_lib/: agent.py  barrier.py  basis.py  double_integrator.py  ergodic_control.py  plotting.py  rendering.py  replay_buffer.py  single_integrator.py  target_dist.py  utils.py
srv/: RosErgodicControl.srv
swarm_testbed_tablet/: README.md  coord_output.txt  ergodic_interface_v12.py  multimodal1.csv  requirements.txt  tablet.msg
